--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "element-ui": "^2.13.1",
+    "element-ui": "^2.13.2",
+    "file-loader": "^6.0.0",
     "vue": "^2.6.11",
     "vue-pdf": "^4.0.8",
     "vue-router": "^3.1.6",
